# wayfire-workspace-py

./: README.md  listener.py  pyproject.toml  utility.py
